# bory

./: .gitignore  README.md  build.bat  checklist.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
.github/workflows/: ci.yml
src/: __init__.py  cli.py
src/core/: __init__.py  config.py  container.py  logging_setup.py  models.py  ocr.py  scraper.py
src/io/: __init__.py  capture.py
src/ui/: app.py
tests/: test_config.py  test_integration_pipeline.py  test_ocr_parse.py  test_scraper.py
